# MeinFisch

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/constants/: CMakeLists.txt  Constants.h  EvaluationConstants.h  MoveGenerationConstants.cpp  MoveGenerationConstants.h  PieceSquareTables.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  EvaluationFunction.cpp  EvaluationFunction.h  Memory.cpp  Memory.h  Movepicking.cpp  Movepicking.h
src/engineUCI/: CMakeLists.txt  engineUCI.cpp  engineUCI.h
src/game_logic/: CMakeLists.txt  Conversions.cpp  Conversions.h  GameBoard.cpp  GameBoard.h  Move.cpp  Move.h  MoveGeneration.cpp  MoveGeneration.h
src/game_loop/: CMakeLists.txt  Settings.h
src/io/: CMakeLists.txt  Output.cpp  Output.h
src/nnue/: CMakeLists.txt  Network.cpp  Network.h
src/utils/: CMakeLists.txt  Utils.cpp  Utils.h
test/: CMakeLists.txt  PerformanceTest.cpp  PerformanceTest.h  Test.cpp  Test.h
